--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import "tailwindcss";
+
+
+/* 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,5 +29,4 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
+} */
